# csmusgen

./: Makefile.am  Makefile.in  addParam.h  addParam2.h  classes.h  controls.h  counterpointFunc.h  counterpointFunc_act.h  counterpointFunc_db.h  counterpointFunc_dur.h  counterpointFunc_instr.h  counterpointFunc_p10.h  counterpointFunc_p10b.h  counterpointFunc_p11.h  counterpointFunc_p11b.h  counterpointFunc_p12.h  counterpointFunc_p12b.h  counterpointFunc_p13.h  counterpointFunc_p13b.h  counterpointFunc_p14.h  counterpointFunc_p14b.h  counterpointFunc_p15.h  counterpointFunc_p15b.h  counterpointFunc_p6.h  counterpointFunc_p6b.h  counterpointFunc_p7.h  counterpointFunc_p7b.h  counterpointFunc_p8.h  counterpointFunc_p8b.h  counterpointFunc_p9.h  counterpointFunc_p9b.h  counterpointFunc_pitch.h  csmusgen  csmusgen.cpp  define.h  editor.h  formulaFunc.h  inOut.h  mainpage.h  menu.h  (+4 more)
